--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
 }
