--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,5 @@ dependencies {
 
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
+    compile 'mysql:mysql-connector-java:8.0.19'
 }
