--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.1.0'
+    testCompile group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
+    testCompileOnly('javax.servlet:javax.servlet-api:4.0.1')
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
-    compile 'mysql:mysql-connector-java:8.0.19'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
 }
