--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'war'
 }
 
+test{
+    useJUnitPlatform()
+}
 group 'it.unisa.agencyformation'
 version '1.0'
 
@@ -11,10 +14,14 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.13.2'
+
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
     testCompileOnly('javax.servlet:javax.servlet-api:4.0.1')
+   // testCompileOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
+
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+
 }
