--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
     testCompileOnly('javax.servlet:javax.servlet-api:4.0.1')
+    testImplementation('org.mockito:mockito-inline:3.4.0')
    // testCompileOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
