--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
-
+    implementation group: 'org.apache.tomcat', name: 'tomcat-catalina', version: '9.0.56'
 }
 
 checkstyle {
